4 - Criação do formLogin e getLoginR

--- a/ayesod.cabal
+++ b/ayesod.cabal
@@ -42,5 +42,4 @@ executable         ayesod
     other-modules: Application
                    Foundation
                    Usuario
-                   Handlers
-                   Front
+                   Login
