7 - Criacao do ARQ Selects e o metodo selectCasaId

--- a/ayesod.cabal
+++ b/ayesod.cabal
@@ -43,3 +43,4 @@ executable         ayesod
                    Foundation
                    Usuario
                    Login
+                   Selects
